vpc.yaml
Description: >-
 An AWS VPC with two subnets.
AWSTemplateFormatVersion: 2010-09-09
Resources:
 VPC:
   Type: AWS::EC2::VPC
   Properties:
     CidrBlock: 10.0.0.0/16
     EnableDnsSupport: true
 IGW:
   Type: AWS::EC2::InternetGateway
 VPCGatewayAttachment:
   Type: AWS::EC2::VPCGatewayAttachment
   Properties:
        VpcId: !Ref VPC
        InternetGatewayId: !Ref IGW
 Subnet1:
   Type: AWS::EC2::Subnet
   Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
 Subnet2:
   Type: AWS::EC2::Subnet
   Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
 RouteTable:
   Type: AWS::EC2::RouteTable
   Properties:
       VpcId: !Ref VPC
 InternetRoute:
   Type: AWS::EC2::Route
   DependsOn: IGW
   Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
      RouteTableId: !Ref RouteTable
 Subnet1RouteTableAssociation:
   Type: AWS::EC2::SubnetRouteTableAssociation
   Properties:
     RouteTableId: !Ref RouteTable
     SubnetId: !Ref Subnet1
 Subnet2RouteTableAssociation:
   Type: AWS::EC2::SubnetRouteTableAssociation
   Properties:
     RouteTableId: !Ref RouteTable
     SubnetId: !Ref Subnet2
 SecurityGroup:
   Type: AWS::EC2::SecurityGroup
   Properties:
     GroupName: "Internet Group"
     GroupDescription: "SSH traffic in, all traffic out"
     VpcId: !Ref VPC
     SecurityGrupIngress:
        IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
     SecurityGroupEgress:
        IpProtocol: -1
        CidrIp: 0.0.0.0/0
